# serializer version: 1
# name: test_filter_statement_pagination_sql[session-tracked-async-aiosqlite_engine]
  '''
  SELECT color.name,
         color.id
    FROM (
          SELECT color.name AS name,
                 color.id AS id,
                 color.id AS id__1
            FROM color AS color
            JOIN (
                  SELECT color.id AS id
                    FROM color
                   WHERE color.name IN (__[POSTCOMPILE_name_1])
                 ) AS anon_1
              ON color.id = anon_1.id
           ORDER BY color.id ASC
           LIMIT ?
          OFFSET ?
         ) AS color
   ORDER BY color.id ASC
   LIMIT ?
  OFFSET ?
  '''
# ---
# name: test_filter_statement_pagination_sql[session-tracked-async-asyncmy_engine]
  '''
  SELECT color.name,
         color.id
    FROM (
          SELECT color.name AS name,
                 color.id AS id,
                 color.id AS id__1
            FROM color AS color
           INNER JOIN (
                  SELECT color.id AS id
                    FROM color
                   WHERE color.name IN (__[POSTCOMPILE_name_1])
                 ) AS anon_1
              ON color.id = anon_1.id
           ORDER BY color.id ASC
           LIMIT %s,
                 %s
         ) AS color
   ORDER BY color.id ASC
   LIMIT %s
  '''
# ---
# name: test_filter_statement_pagination_sql[session-tracked-async-asyncpg_engine]
  '''
  SELECT color.name,
         color.id
    FROM (
          SELECT color.name AS name,
                 color.id AS id,
                 color.id AS id__1
            FROM color AS color
            JOIN (
                  SELECT color.id AS id
                    FROM color
                   WHERE color.name IN (__[POSTCOMPILE_name_1])
                 ) AS anon_1
              ON color.id = anon_1.id
           ORDER BY color.id ASC
           LIMIT $1::INTEGER
          OFFSET $2::INTEGER
         ) AS color
   ORDER BY color.id ASC
   LIMIT $3::INTEGER
  '''
# ---
# name: test_filter_statement_pagination_sql[session-tracked-async-psycopg_async_engine]
  '''
  SELECT color.name,
         color.id
    FROM (
          SELECT color.name AS name,
                 color.id AS id,
                 color.id AS id__1
            FROM color AS color
            JOIN (
                  SELECT color.id AS id
                    FROM color
                   WHERE color.name IN (__[POSTCOMPILE_name_1])
                 ) AS anon_1
              ON color.id = anon_1.id
           ORDER BY color.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS color
   ORDER BY color.id ASC
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_filter_statement_pagination_sql[session-tracked-sync-psycopg_engine]
  '''
  SELECT color.name,
         color.id
    FROM (
          SELECT color.name AS name,
                 color.id AS id,
                 color.id AS id__1
            FROM color AS color
            JOIN (
                  SELECT color.id AS id
                    FROM color
                   WHERE color.name IN (__[POSTCOMPILE_name_1])
                 ) AS anon_1
              ON color.id = anon_1.id
           ORDER BY color.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS color
   ORDER BY color.id ASC
   LIMIT %(param_3)s::INTEGER
  '''
# ---
# name: test_filter_statement_pagination_sql[session-tracked-sync-sqlite_engine]
  '''
  SELECT color.name,
         color.id
    FROM (
          SELECT color.name AS name,
                 color.id AS id,
                 color.id AS id__1
            FROM color AS color
            JOIN (
                  SELECT color.id AS id
                    FROM color
                   WHERE color.name IN (__[POSTCOMPILE_name_1])
                 ) AS anon_1
              ON color.id = anon_1.id
           ORDER BY color.id ASC
           LIMIT ?
          OFFSET ?
         ) AS color
   ORDER BY color.id ASC
   LIMIT ?
  OFFSET ?
  '''
# ---
# name: test_filtered_statement[session-tracked-async-aiosqlite_engine]
  '''
  SELECT color.name,
         color.id
    FROM color AS color
    JOIN (
          SELECT color.id AS id
            FROM color
           WHERE color.name = ?
         ) AS anon_1
      ON color.id = anon_1.id
   ORDER BY color.id ASC
  '''
# ---
# name: test_filtered_statement[session-tracked-async-asyncmy_engine]
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   INNER JOIN (
          SELECT color.id AS id
            FROM color
           WHERE color.name = %s
         ) AS anon_1
      ON color.id = anon_1.id
   ORDER BY color.id ASC
  '''
# ---
# name: test_filtered_statement[session-tracked-async-asyncpg_engine]
  '''
  SELECT color.name,
         color.id
    FROM color AS color
    JOIN (
          SELECT color.id AS id
            FROM color
           WHERE color.name = $1::VARCHAR
         ) AS anon_1
      ON color.id = anon_1.id
   ORDER BY color.id ASC
  '''
# ---
# name: test_filtered_statement[session-tracked-async-psycopg_async_engine]
  '''
  SELECT color.name,
         color.id
    FROM color AS color
    JOIN (
          SELECT color.id AS id
            FROM color
           WHERE color.name = %(name_1)s::VARCHAR
         ) AS anon_1
      ON color.id = anon_1.id
   ORDER BY color.id ASC
  '''
# ---
# name: test_filtered_statement[session-tracked-sync-psycopg_engine]
  '''
  SELECT color.name,
         color.id
    FROM color AS color
    JOIN (
          SELECT color.id AS id
            FROM color
           WHERE color.name = %(name_1)s::VARCHAR
         ) AS anon_1
      ON color.id = anon_1.id
   ORDER BY color.id ASC
  '''
# ---
# name: test_filtered_statement[session-tracked-sync-sqlite_engine]
  '''
  SELECT color.name,
         color.id
    FROM color AS color
    JOIN (
          SELECT color.id AS id
            FROM color
           WHERE color.name = ?
         ) AS anon_1
      ON color.id = anon_1.id
   ORDER BY color.id ASC
  '''
# ---
# name: test_only_queried_columns_included_in_select[session-tracked-async-aiosqlite_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_only_queried_columns_included_in_select[session-tracked-async-asyncmy_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_only_queried_columns_included_in_select[session-tracked-async-asyncpg_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_only_queried_columns_included_in_select[session-tracked-async-psycopg_async_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_only_queried_columns_included_in_select[session-tracked-sync-psycopg_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_only_queried_columns_included_in_select[session-tracked-sync-sqlite_engine]
  '''
  SELECT fruit_1.name,
         fruit_1.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS fruit_1
      ON color.id = fruit_1.color_id
   ORDER BY color.id ASC,
            fruit_1.id ASC
  '''
# ---
# name: test_secondary_table_relationships[session-tracked-async-aiosqlite_engine]
  '''
  SELECT department_1.name,
         department_1.id,
         user.id AS id_1
    FROM USER AS USER
    LEFT OUTER JOIN (user_department_join_table AS user_department_join_table_1 JOIN department AS department_1 ON department_1.id = user_department_join_table_1.department_id)
      ON user.id = user_department_join_table_1.user_id
   ORDER BY user.id ASC,
            department_1.id ASC
  '''
# ---
# name: test_secondary_table_relationships[session-tracked-async-asyncmy_engine]
  '''
  SELECT department_1.name,
         department_1.id,
         user.id AS id_1
    FROM USER AS USER
    LEFT OUTER JOIN (user_department_join_table AS user_department_join_table_1 INNER JOIN department AS department_1 ON department_1.id = user_department_join_table_1.department_id)
      ON user.id = user_department_join_table_1.user_id
   ORDER BY user.id ASC,
            department_1.id ASC
  '''
# ---
# name: test_secondary_table_relationships[session-tracked-async-asyncpg_engine]
  '''
  SELECT department_1.name,
         department_1.id,
         "user".id AS id_1
    FROM "user" AS "user"
    LEFT OUTER JOIN (user_department_join_table AS user_department_join_table_1 JOIN department AS department_1 ON department_1.id = user_department_join_table_1.department_id)
      ON "user".id = user_department_join_table_1.user_id
   ORDER BY "user".id ASC,
            department_1.id ASC
  '''
# ---
# name: test_secondary_table_relationships[session-tracked-async-psycopg_async_engine]
  '''
  SELECT department_1.name,
         department_1.id,
         "user".id AS id_1
    FROM "user" AS "user"
    LEFT OUTER JOIN (user_department_join_table AS user_department_join_table_1 JOIN department AS department_1 ON department_1.id = user_department_join_table_1.department_id)
      ON "user".id = user_department_join_table_1.user_id
   ORDER BY "user".id ASC,
            department_1.id ASC
  '''
# ---
# name: test_secondary_table_relationships[session-tracked-sync-psycopg_engine]
  '''
  SELECT department_1.name,
         department_1.id,
         "user".id AS id_1
    FROM "user" AS "user"
    LEFT OUTER JOIN (user_department_join_table AS user_department_join_table_1 JOIN department AS department_1 ON department_1.id = user_department_join_table_1.department_id)
      ON "user".id = user_department_join_table_1.user_id
   ORDER BY "user".id ASC,
            department_1.id ASC
  '''
# ---
# name: test_secondary_table_relationships[session-tracked-sync-sqlite_engine]
  '''
  SELECT department_1.name,
         department_1.id,
         user.id AS id_1
    FROM USER AS USER
    LEFT OUTER JOIN (user_department_join_table AS user_department_join_table_1 JOIN department AS department_1 ON department_1.id = user_department_join_table_1.department_id)
      ON user.id = user_department_join_table_1.user_id
   ORDER BY user.id ASC,
            department_1.id ASC
  '''
# ---
